--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -35,7 +35,7 @@ jobs:
         run: echo ::set-output name=VERSION::$(echo $GITHUB_REF | cut -d / -f 3)
 
       - name: Apply version
-        run: yarn apply-version ${{ steps.get_version.outputs.VERSION }}
+        run: yarn run version ${{ steps.get_version.outputs.VERSION }}
 
       - name: Publish
         run: "cd publish && npm publish"
