--- a/package.json
+++ b/package.json
@@ -38,6 +38,9 @@
     "ts-jest": "^27.0.5",
     "typescript": "^4.2.4"
   },
+  "publishConfig": {
+    "access": "public"
+  },
   "publishDeps": {
     "peer": {
       "date-fns": "^2.25.0",
