Add: Better peer deps + copy index decl file

--- a/package.json
+++ b/package.json
@@ -43,11 +43,11 @@
   },
   "publishDeps": {
     "peer": {
-      "date-fns": ">2.0.0 || <3",
+      "date-fns": ">=2 || <3",
       "aws-sdk": ">2.900.0 || <3",
-      "joi": ">17.0.0 || <18",
+      "joi": ">=17 || <18",
       "uuid": "8",
-      "jest": ">21"
+      "ts-jest": ">=21"
     },
     "dep": {
       "axios": "^0.22.0",
