--- a/package.json
+++ b/package.json
@@ -29,8 +29,7 @@
     "aws-lambda": "^1.0.6",
     "concurrently": "^6.2.1",
     "eslint": "^7.10.0",
-    "eslint-config-airbnb-base-typescript-prettier": "^3.1.1",
-    "eslint-config-airbnb-typescript-prettier": "^4.1.0",
+
     "faker": "^5.5.3",
     "husky": "^4.3.0",
     "jest": "^27.0.5",
@@ -43,10 +42,16 @@
   },
   "publishDeps": {
     "peer": {
-      "date-fns": ">=2 || <3",
+      "@typescript-eslint/eslint-plugin": ">=4 || <5",
+      "@typescript-eslint/parser": ">=4 || <5",
       "aws-sdk": ">2.900.0 || <3",
+      "date-fns": ">=2 || <3",
+      "eslint": ">=7.2.0",
+      "eslint-config-airbnb-base-typescript-prettier": ">=3.1 || <4",
+      "eslint-config-airbnb-typescript-prettier": ">=4 || <5",
       "joi": ">=17 || <18",
       "uuid": "8",
+      "prettier": ">=2",
       "ts-jest": ">=21"
     },
     "dep": {
