--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "@types/uuid": "^8.3.1",
     "@typescript-eslint/eslint-plugin": "^4.0.1",
     "@typescript-eslint/parser": "^4.0.1",
+    "eslint-config-airbnb-base-typescript-prettier": "^3.1.1",
+    "eslint-config-airbnb-typescript-prettier": "^4.1.0",
     "aws-lambda": "^1.0.6",
     "concurrently": "^6.2.1",
     "eslint": "^7.10.0",
