--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "date-fns": "^2.25.0",
     "deepmerge": "^4.2.2",
     "joi": "^17.4.2",
+    "nodemailer": "^6.7.2",
     "qs": "^6.10.1",
     "uuid": "^8.3.2"
   },
@@ -21,17 +22,17 @@
     "@types/jest": "^27.0.1",
     "@types/joi": "^17.2.3",
     "@types/node": "^14.11.2",
+    "@types/nodemailer": "^6.4.4",
     "@types/qs": "^6.9.7",
     "@types/typescript": "^2.0.0",
     "@types/uuid": "^8.3.1",
     "@typescript-eslint/eslint-plugin": "^4.0.1",
     "@typescript-eslint/parser": "^4.0.1",
-    "eslint-config-airbnb-base-typescript-prettier": "^3.1.1",
-    "eslint-config-airbnb-typescript-prettier": "^4.1.0",
     "aws-lambda": "^1.0.6",
     "concurrently": "^6.2.1",
     "eslint": "^7.10.0",
-
+    "eslint-config-airbnb-base-typescript-prettier": "^3.1.1",
+    "eslint-config-airbnb-typescript-prettier": "^4.1.0",
     "faker": "^5.5.3",
     "husky": "^4.3.0",
     "jest": "^27.0.5",
