--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "peer": {
       "@typescript-eslint/eslint-plugin": ">=4 || <5",
       "@typescript-eslint/parser": ">=4 || <5",
+      "redis": "^4.0.4",
       "aws-sdk": ">2.1000.0 || <3",
       "date-fns": ">=2 || <3",
       "eslint": ">=7.2.0",
