--- a/package.json
+++ b/package.json
@@ -38,7 +38,8 @@
     "jest": "^27.0.5",
     "prettier": "^2.1.2",
     "ts-jest": "^27.0.5",
-    "typescript": "^4.2.4"
+    "typescript": "^4.2.4",
+    "redis": "^4.0.4"
   },
   "publishConfig": {
     "access": "public"
