--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@aws-sdk/client-eventbridge": "^3.421.0",
     "@aws-sdk/client-kinesis": "^3.421.0",
     "@aws-sdk/client-lambda": "^3.421.0",
+    "@aws-sdk/client-ses": "^3.421.0",
     "@aws-sdk/client-sns": "^3.421.0",
     "@aws-sdk/client-sqs": "^3.421.0",
     "@aws-sdk/util-dynamodb": "^3.421.0",
