added updates for emails, unfinished dynamodb stuff, and ssm/ses related stuff

--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "deepmerge": "^4.2.2",
     "joi": "^17.4.2",
     "jsonwebtoken": "^8.5.1",
-    "nodemailer": "^6.7.2",
+    "nodemailer": "^6.9.5",
     "qs": "^6.10.1",
     "uuid": "^8.3.2"
   },
@@ -22,9 +22,12 @@
     "@aws-sdk/client-eventbridge": "^3.421.0",
     "@aws-sdk/client-kinesis": "^3.421.0",
     "@aws-sdk/client-lambda": "^3.421.0",
+    "@aws-sdk/client-s3": "^3.421.0",
     "@aws-sdk/client-ses": "^3.421.0",
     "@aws-sdk/client-sns": "^3.421.0",
     "@aws-sdk/client-sqs": "^3.421.0",
+    "@aws-sdk/client-ssm": "^3.421.0",
+    "@aws-sdk/lib-dynamodb": "^3.421.0",
     "@aws-sdk/util-dynamodb": "^3.421.0",
     "@types/aws-lambda": "^8.10.122",
     "@types/faker": "^5.5.8",
@@ -32,7 +35,7 @@
     "@types/joi": "^17.2.3",
     "@types/jsonwebtoken": "^8.5.8",
     "@types/node": "^14.11.2",
-    "@types/nodemailer": "^6.4.4",
+    "@types/nodemailer": "^6.4.11",
     "@types/qs": "^6.9.7",
     "@types/typescript": "^2.0.0",
     "@types/uuid": "^8.3.1",
