--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "@typescript-eslint/eslint-plugin": "^4.0.1",
     "@typescript-eslint/parser": "^4.0.1",
     "aws-lambda": "^1.0.6",
+    "aws-sdk-client-mock": "^3.0.0",
     "concurrently": "^6.2.1",
     "eslint": "^7.10.0",
     "eslint-config-airbnb-base-typescript-prettier": "^3.1.1",
