--- a/package.json
+++ b/package.json
@@ -71,7 +71,18 @@
       "jsonwebtoken": "8",
       "uuid": "8",
       "prettier": ">=2",
-      "ts-jest": ">=21"
+      "ts-jest": ">=21",
+      "@aws-sdk/client-dynamodb": "^3.421.0",
+      "@aws-sdk/client-eventbridge": "^3.421.0",
+      "@aws-sdk/client-kinesis": "^3.421.0",
+      "@aws-sdk/client-lambda": "^3.421.0",
+      "@aws-sdk/client-s3": "^3.421.0",
+      "@aws-sdk/client-ses": "^3.421.0",
+      "@aws-sdk/client-sns": "^3.421.0",
+      "@aws-sdk/client-sqs": "^3.421.0",
+      "@aws-sdk/client-ssm": "^3.421.0",
+      "@aws-sdk/lib-dynamodb": "^3.421.0",
+      "@aws-sdk/util-dynamodb": "^3.421.0"
     },
     "dep": {
       "axios": "^0.22.0",
