--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@aws-sdk/client-kinesis": "^3.421.0",
     "@aws-sdk/client-lambda": "^3.421.0",
     "@aws-sdk/client-s3": "^3.421.0",
+    "@aws-sdk/client-secrets-manager": "^3.423.0",
     "@aws-sdk/client-ses": "^3.421.0",
     "@aws-sdk/client-sns": "^3.421.0",
     "@aws-sdk/client-sqs": "^3.421.0",
@@ -72,6 +73,7 @@
       "uuid": "8",
       "prettier": ">=2",
       "ts-jest": ">=21",
+      "@aws-sdk/client-secrets-manager": "^3.423.0",
       "@aws-sdk/client-dynamodb": "^3.421.0",
       "@aws-sdk/client-eventbridge": "^3.421.0",
       "@aws-sdk/client-kinesis": "^3.421.0",
