--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@aws-sdk/client-s3": "^3.421.0",
     "@aws-sdk/client-secrets-manager": "^3.423.0",
     "@aws-sdk/client-ses": "^3.421.0",
+    "@aws-sdk/client-sfn": "^3.423.0",
     "@aws-sdk/client-sns": "^3.421.0",
     "@aws-sdk/client-sqs": "^3.421.0",
     "@aws-sdk/client-ssm": "^3.421.0",
@@ -44,6 +45,7 @@
     "@typescript-eslint/parser": "^4.0.1",
     "aws-lambda": "^1.0.6",
     "aws-sdk-client-mock": "^3.0.0",
+    "aws-xray-sdk-core": "^3.5.2",
     "concurrently": "^6.2.1",
     "eslint": "^7.10.0",
     "eslint-config-airbnb-base-typescript-prettier": "^3.1.1",
