--- a/package.json
+++ b/package.json
@@ -75,13 +75,14 @@
       "uuid": "8",
       "prettier": ">=2",
       "ts-jest": ">=21",
-      "@aws-sdk/client-secrets-manager": "^3.423.0",
       "@aws-sdk/client-dynamodb": "^3.421.0",
       "@aws-sdk/client-eventbridge": "^3.421.0",
       "@aws-sdk/client-kinesis": "^3.421.0",
       "@aws-sdk/client-lambda": "^3.421.0",
       "@aws-sdk/client-s3": "^3.421.0",
+      "@aws-sdk/client-secrets-manager": "^3.423.0",
       "@aws-sdk/client-ses": "^3.421.0",
+      "@aws-sdk/client-sfn": "^3.423.0",
       "@aws-sdk/client-sns": "^3.421.0",
       "@aws-sdk/client-sqs": "^3.421.0",
       "@aws-sdk/client-ssm": "^3.421.0",
