--- a/package.json
+++ b/package.json
@@ -87,7 +87,8 @@
       "@aws-sdk/client-sqs": "^3.421.0",
       "@aws-sdk/client-ssm": "^3.421.0",
       "@aws-sdk/lib-dynamodb": "^3.421.0",
-      "@aws-sdk/util-dynamodb": "^3.421.0"
+      "@aws-sdk/util-dynamodb": "^3.421.0",
+      "aws-xray-sdk-core": "^3.5.2"
     },
     "dep": {
       "axios": "^0.22.0",
