--- a/package.json
+++ b/package.json
@@ -75,20 +75,20 @@
       "uuid": "8",
       "prettier": ">=2",
       "ts-jest": ">=21",
-      "@aws-sdk/client-dynamodb": "^3.421.0",
-      "@aws-sdk/client-eventbridge": "^3.421.0",
-      "@aws-sdk/client-kinesis": "^3.421.0",
-      "@aws-sdk/client-lambda": "^3.421.0",
-      "@aws-sdk/client-s3": "^3.421.0",
-      "@aws-sdk/client-secrets-manager": "^3.423.0",
-      "@aws-sdk/client-ses": "^3.421.0",
-      "@aws-sdk/client-sfn": "^3.423.0",
-      "@aws-sdk/client-sns": "^3.421.0",
-      "@aws-sdk/client-sqs": "^3.421.0",
-      "@aws-sdk/client-ssm": "^3.421.0",
-      "@aws-sdk/lib-dynamodb": "^3.421.0",
-      "@aws-sdk/util-dynamodb": "^3.421.0",
-      "aws-xray-sdk-core": "^3.5.2"
+      "@aws-sdk/client-dynamodb": "^3.421.0 || < 4",
+      "@aws-sdk/client-eventbridge": "^3.421.0 || < 4",
+      "@aws-sdk/client-kinesis": "^3.421.0 || < 4",
+      "@aws-sdk/client-lambda": "^3.421.0 || < 4",
+      "@aws-sdk/client-s3": "^3.421.0 || < 4",
+      "@aws-sdk/client-secrets-manager": "^3.423.0 || < 4",
+      "@aws-sdk/client-ses": "^3.421.0 || <4",
+      "@aws-sdk/client-sfn": "^3.423.0 || <4",
+      "@aws-sdk/client-sns": "^3.421.0 || <4",
+      "@aws-sdk/client-sqs": "^3.421.0 || <4",
+      "@aws-sdk/client-ssm": "^3.421.0 || <4",
+      "@aws-sdk/lib-dynamodb": "^3.421.0 || <4",
+      "@aws-sdk/util-dynamodb": "^3.421.0 || <4",
+      "aws-xray-sdk-core": "^3.5.2 || <4"
     },
     "dep": {
       "axios": "^0.22.0",
