--- a/package.json
+++ b/package.json
@@ -45,7 +45,6 @@
     "@typescript-eslint/parser": "^4.0.1",
     "aws-lambda": "^1.0.6",
     "aws-sdk-client-mock": "^3.0.0",
-    "aws-xray-sdk-core": "^3.5.2",
     "concurrently": "^6.2.1",
     "eslint": "^7.10.0",
     "eslint-config-airbnb-base-typescript-prettier": "^3.1.1",
@@ -87,8 +86,7 @@
       "@aws-sdk/client-sqs": "^3.421.0 || <4",
       "@aws-sdk/client-ssm": "^3.421.0 || <4",
       "@aws-sdk/lib-dynamodb": "^3.421.0 || <4",
-      "@aws-sdk/util-dynamodb": "^3.421.0 || <4",
-      "aws-xray-sdk-core": "^3.5.2 || <4"
+      "@aws-sdk/util-dynamodb": "^3.421.0 || <4"
     },
     "dep": {
       "axios": "^0.22.0",
